-- BY-626: 룸 상태 DB 원본화. 이력 테이블 rooms·room_participations가 라이브 상태를 함께 담는다.
-- 룸 기능 미출시라 두 테이블에는 QA 행만 있어 DROP 후 재생성한다.
DROP TABLE room_participations;
DROP TABLE rooms;

CREATE TABLE live_task (
    task_id      varchar     PRIMARY KEY,     -- ECS 태스크 ID(로그 스트림과 일치), 없으면 UUID
    heartbeat_at timestamptz NOT NULL,
    reclaimed_at timestamptz                  -- NOT NULL = 다른 태스크가 죽었다고 보고 참가자를 회수함(펜싱 신호)
);

CREATE TABLE rooms (
    id           bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    invite_code  varchar(4)  NOT NULL,
    created_by   bigint      NOT NULL REFERENCES users (id),
    created_at   timestamptz NOT NULL,
    closed_at    timestamptz,                  -- NULL = 열린 방. 닫힌 방은 영구 보존(이력)
    close_reason varchar(20)                   -- LAST_LEFT | EMPTY_EXPIRED
);
CREATE UNIQUE INDEX rooms_open_code_uidx   ON rooms (invite_code) WHERE closed_at IS NULL;
CREATE INDEX        rooms_code_latest_idx  ON rooms (invite_code, created_at DESC);
CREATE INDEX        rooms_open_created_idx ON rooms (created_at) WHERE closed_at IS NULL;

CREATE TABLE room_participations (
    id                 bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    room_id            bigint      NOT NULL REFERENCES rooms (id),
    user_id            bigint      NOT NULL REFERENCES users (id),
    nickname           varchar,
    goal               varchar,
    category           varchar,
    camera_on          boolean     NOT NULL DEFAULT false,
    focus_state        varchar(20) NOT NULL DEFAULT 'FOCUS',
    focus_sec          integer     NOT NULL DEFAULT 0,
    reserved_at        timestamptz NOT NULL,
    stomp_confirmed    boolean     NOT NULL DEFAULT false,
    stomp_session_id   varchar,
    session_opened_at  timestamptz,               -- 마지막으로 확정된 세션의 소켓 오픈 시각
    task_id            varchar,
    disconnected_at    timestamptz,
    joined_at          timestamptz,               -- 최초 STOMP 확정 시각. NULL = 확정된 적 없는 예약
    left_at            timestamptz,               -- NULL = 지금 자리를 가진 참가자
    leave_reason       varchar(20)                -- EXPLICIT | DISCONNECT_TIMEOUT | SWITCHED_ROOM
) WITH (fillfactor = 70);
CREATE UNIQUE INDEX rp_live_user_uidx      ON room_participations (user_id)          WHERE left_at IS NULL;
CREATE UNIQUE INDEX rp_live_room_user_uidx ON room_participations (room_id, user_id) WHERE left_at IS NULL;
CREATE INDEX rp_session_idx      ON room_participations (stomp_session_id) WHERE stomp_session_id IS NOT NULL;
CREATE INDEX rp_reserved_idx     ON room_participations (reserved_at)      WHERE left_at IS NULL AND NOT stomp_confirmed;
CREATE INDEX rp_disconnected_idx ON room_participations (disconnected_at)  WHERE left_at IS NULL AND disconnected_at IS NOT NULL;
CREATE INDEX rp_task_idx         ON room_participations (task_id)          WHERE task_id IS NOT NULL;
CREATE INDEX rp_user_joined_idx  ON room_participations (user_id, joined_at);
