CREATE TABLE "users" (
                         "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                         "provider" varchar NOT NULL,
                         "provider_user_id" varchar NOT NULL,
                         "nickname" varchar UNIQUE,
                         "category" varchar,
                         "profile_image" varchar,
                         "status" varchar DEFAULT 'ACTIVE',
                         "streak" integer,
                         "max_streak" integer,
                         "notify_enabled" boolean DEFAULT false,
                         "delete_at" timestamptz,
                         "created_at" timestamptz,
                         "updated_at" timestamptz
);

CREATE TABLE "study_session" (
                                 "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                 "user_id" bigint NOT NULL,
                                 "stat_date" date,
                                 "started_at" timestamptz,
                                 "ended_at" timestamptz,
                                 "session_sec" integer,
                                 "focus_sec" integer
);

CREATE TABLE "status_event" (
                                "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                "session_id" bigint NOT NULL,
                                "status" varchar NOT NULL,
                                "started_at" timestamptz,
                                "ended_at" timestamptz
);

CREATE TABLE "study_stats_daily" (
                                     "user_id" bigint NOT NULL,
                                     "stat_date" date,
                                     "total_session_sec" integer,
                                     "total_focus_sec" integer,
                                     "session_count" integer,
                                     "updated_at" timestamptz,
                                     PRIMARY KEY ("user_id", "stat_date")
);

CREATE TABLE "study_stats_weekly" (
                                      "user_id" bigint NOT NULL,
                                      "period_start" date,
                                      "total_session_sec" integer,
                                      "total_focus_sec" integer,
                                      "session_count" integer,
                                      "updated_at" timestamptz,
                                      PRIMARY KEY ("user_id", "period_start")
);

CREATE TABLE "study_stats_monthly" (
                                       "user_id" bigint NOT NULL,
                                       "period_start" date,
                                       "total_session_sec" integer,
                                       "total_focus_sec" integer,
                                       "session_count" integer,
                                       "updated_at" timestamptz,
                                       PRIMARY KEY ("user_id", "period_start")
);

CREATE TABLE "notification" (
                                "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                "title" varchar,
                                "content" varchar,
                                "created_at" timestamptz,
                                "updated_at" timestamptz
);

CREATE TABLE "user_notification" (
                                     "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                     "user_id" bigint NOT NULL,
                                     "notification_id" bigint NOT NULL,
                                     "is_read" boolean DEFAULT false,
                                     "created_at" timestamptz
);

CREATE TABLE "push_token" (
                              "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                              "user_id" bigint NOT NULL,
                              "token" varchar NOT NULL,
                              "platform" varchar,
                              "created_at" timestamptz,
                              "updated_at" timestamptz
);

CREATE TABLE "report" (
                          "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                          "report_user_id" bigint NOT NULL,
                          "target_user_id" bigint NOT NULL,
                          "reason" varchar,
                          "created_at" timestamptz
);

CREATE TABLE "inquiry" (
                           "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                           "user_id" bigint NOT NULL,
                           "content" varchar,
                           "created_at" timestamptz
);

CREATE UNIQUE INDEX ON "users" ("provider", "provider_user_id");

CREATE INDEX ON "study_session" ("user_id", "stat_date");

CREATE INDEX ON "status_event" ("session_id");

CREATE INDEX ON "study_stats_daily" ("stat_date");

CREATE INDEX ON "study_stats_weekly" ("period_start");

CREATE INDEX ON "study_stats_monthly" ("period_start");

CREATE INDEX ON "user_notification" ("user_id");

CREATE UNIQUE INDEX ON "push_token" ("token");

CREATE INDEX ON "push_token" ("user_id");

CREATE INDEX ON "report" ("target_user_id");

CREATE INDEX ON "report" ("report_user_id");

CREATE INDEX ON "inquiry" ("created_at");

ALTER TABLE "study_session" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "status_event" ADD FOREIGN KEY ("session_id") REFERENCES "study_session" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "study_stats_daily" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "study_stats_weekly" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "study_stats_monthly" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_notification" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "user_notification" ADD FOREIGN KEY ("notification_id") REFERENCES "notification" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "push_token" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "report" ADD FOREIGN KEY ("report_user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "report" ADD FOREIGN KEY ("target_user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "inquiry" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;
