CREATE TABLE "refresh_token" (
                                 "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
                                 "user_id" bigint NOT NULL,
                                 "token_hash" varchar NOT NULL,
                                 "expires_at" timestamptz NOT NULL,
                                 "used_at" timestamptz,
                                 "created_at" timestamptz NOT NULL
);

CREATE UNIQUE INDEX ON "refresh_token" ("token_hash");

CREATE INDEX ON "refresh_token" ("user_id");

ALTER TABLE "refresh_token" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") DEFERRABLE INITIALLY IMMEDIATE;
