// ---------------------------------------------------------
// 회원
// ---------------------------------------------------------

Table users {
  id bigint [primary key, increment]
  provider varchar [not null]          // GOOGLE, KAKAO, APPLE, DEVICE(익명 기기, ADR-0004)
  provider_user_id varchar [not null]
  email varchar                  // 소셜 로그인 시 수집 (미제공 시 null)
  nickname varchar [unique]
  category varchar               // 수능/공무원/자격증 등
  profile_image varchar
  status varchar [default: 'ACTIVE']   // ACTIVE, DELETE
  notify_enabled boolean [default: false]
  delete_at timestamptz
  created_at timestamptz
  updated_at timestamptz

  indexes {
    (provider, provider_user_id) [unique]
  }
}

Table refresh_token {
  id bigint [primary key, increment]
  user_id bigint [ref: > users.id, not null]
  token_hash varchar [not null]   // opaque refresh 토큰(UUID)의 SHA-256 해시 (원문 미저장)
  expires_at timestamptz [not null]
  used_at timestamptz             // 회전 시 마킹. 사용된 토큰 재사용 = 탈취 의심 → 유저 토큰 전체 폐기
  created_at timestamptz [not null]

  indexes {
    (token_hash) [unique]
    (user_id)
  }
}

// ---------------------------------------------------------
// 공부 세션 / 상태 이벤트
// ---------------------------------------------------------

Table study_session {
  id bigint [primary key, increment]
  user_id bigint [ref: > users.id, not null]
  stat_date date [not null]      // 적용 날짜 (자정 경계 세션의 귀속일, KST 기준)
  started_at timestamptz [not null] // 세션 시작 — (user_id, started_at)이 멱등 키 (재제출 판별)
  ended_at timestamptz           // 세션 종료 - 서버 타임스탬프, 진행 중이면 null
  study_sec integer          // 총 공부 타이머 시간 — (ended_at - started_at) - PAUSE 이벤트 시간 이하인지 서버에서 검증(조작 방지)
  focus_sec integer         // 순공 시간 — study_sec 이하인지 서버에서 검증
  submission_started_at timestamptz // 루트 제출 식별자 — 자정 분할 조각들이 원본 제출의 시작 시각을 공유. V7 이전 행은 null

  indexes {
    (user_id, stat_date)
    (user_id, started_at) [unique]  // 멱등 키 — 같은 세션 재전송 시 409
    (user_id, submission_started_at)
  }
}

Table status_event {
  id bigint [primary key, increment]
  session_id bigint [ref: > study_session.id, not null]
  status varchar [not null] // AWAY, PHONE, DEVICE, PAUSE
  started_at timestamptz
  ended_at timestamptz

  indexes {
    (session_id)
  }
}

// ---------------------------------------------------------
// 과목 > 할 일 / 세션 과목 구간 (ADR-0021·0023)
// ---------------------------------------------------------

Table study_subject {
  id bigint [primary key, increment]
  user_id bigint [ref: > users.id, not null]
  name varchar(50) [not null]
  sort_order integer [not null, default: 0]   // 목록 정렬 — PUT /api/subjects/order가 0..n-1로 다시 매기고 새 과목은 살아있는 max+1 (ADR-0022)
  color_index integer [not null, default: 0]  // 0..19, 생성 시 그 사용자의 살아있는 과목이 가장 적게 쓴 인덱스를 배정, 이후 불변
  deleted_at timestamptz         // soft delete — 지워도 세션 시간 기록은 남는다
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (user_id) [name: 'idx_study_subject_user_live', note: 'WHERE deleted_at IS NULL']
  }
}

Table study_task {
  id bigint [primary key, increment]
  subject_id bigint [ref: > study_subject.id, not null]
  name varchar(100) [not null]
  done_at timestamptz            // 완료 시각. 마감일 없음 — 완료한 날(KST)까지 목록에 보이고 다음 날부터 숨는다
  deleted_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (subject_id) [name: 'idx_study_task_subject_live', note: 'WHERE deleted_at IS NULL']
  }
}

Table study_session_subject_segment {
  id bigint [primary key, increment]
  session_id bigint [ref: > study_session.id, not null]   // ON DELETE CASCADE — 세션과 함께 사라진다
  subject_id bigint [ref: > study_subject.id, not null]
  started_at timestamptz [not null]   // 과목을 선택한 채 공부한 구간 — 자정 분할 조각에는 잘린 구간 (ADR-0023)
  ended_at timestamptz [not null]
  study_sec integer [not null]   // 서버 파생값: 길이 − PAUSE 겹침
  focus_sec integer [not null]   // 서버 파생값: 길이 − 모든 이벤트 겹침

  indexes {
    (session_id)
    (subject_id)   // 과목 누적 = 합
  }
}

Table study_session_task_done {
  session_id bigint [ref: > study_session.id, not null]   // ON DELETE CASCADE — 세션과 함께 사라진다
  task_id bigint [ref: > study_task.id, not null]         // 지운 할 일의 기록도 남는다(CASCADE 없음)
  Note: '세션 제출 시 완료한 할 일 (ADR-0022). 자정 분할이면 done_at이 속한 조각 하나에만 붙고, 없거나 범위 밖이면 마지막 조각'

  indexes {
    (session_id, task_id) [pk]
    (task_id) [name: 'idx_study_session_task_done_task']
  }
}

// ---------------------------------------------------------
// 통계 (일/주/월 집계 upsert)
// ---------------------------------------------------------

Table study_stats_daily {
  user_id bigint [ref: > users.id, not null]
  stat_date date
  total_session_sec integer
  total_focus_sec integer
  session_count integer
  updated_at timestamptz

  indexes {
    (user_id, stat_date) [pk]
    (stat_date) // 랭킹용
  }
}

Table study_stats_weekly {
  user_id bigint [ref: > users.id, not null]
  period_start date            // 해당 주 월요일
  total_session_sec integer
  total_focus_sec integer
  session_count integer
  updated_at timestamptz

  indexes {
    (user_id, period_start) [pk]
    (period_start) // 랭킹용
  }
}

Table study_stats_monthly {
  user_id bigint [ref: > users.id, not null]
  period_start date            // 해당 월 1일
  total_session_sec integer
  total_focus_sec integer
  session_count integer
  updated_at timestamptz

  indexes {
    (user_id, period_start) [pk]
    (period_start) // 랭킹용
  }
}

// ---------------------------------------------------------
// 알림
// ---------------------------------------------------------

Table notification {
  id bigint [primary key, increment]
  title varchar
  content varchar
  created_at timestamptz
  updated_at timestamptz
}

Table user_notification {
  id bigint [primary key, increment]
  user_id bigint [ref: > users.id, not null]
  notification_id bigint [ref: > notification.id, not null]
  is_read boolean [default: false]
  created_at timestamptz

  indexes {
    (user_id)
  }
}


Table push_token {
  id bigint [primary key, increment]
  user_id bigint [ref: > users.id, not null]
  token varchar [not null]     // FCM registration token / APNs device token
  platform varchar              // IOS, ANDROID
  created_at timestamptz
  updated_at timestamptz          // 토큰은 주기적으로 갱신되므로 갱신 시각

  indexes {
    (token) [unique]
    (user_id)
  }
}

// ---------------------------------------------------------
// 신고
// ---------------------------------------------------------

Table report {
  id bigint [primary key, increment]
  report_user_id bigint [ref: > users.id, not null]
  target_user_id bigint [ref: > users.id, not null]
  reason varchar
  created_at timestamptz

  indexes {
    (target_user_id)
    (report_user_id)
  }
}

// ---------------------------------------------------------
// 방(룸) / 방 참여자
// ---------------------------------------------------------

Table rooms {
  id bigint [primary key, increment]
  invite_code varchar(4) [not null]
  created_by bigint [ref: > users.id, not null]
  created_at timestamptz [not null]
  closed_at timestamptz [note: 'NULL = 열린 방. 닫힌 방은 영구 보존(이력)']
  close_reason varchar(20) [note: 'LAST_LEFT | EMPTY_EXPIRED']

  indexes {
    (invite_code) [unique, name: 'rooms_open_code_uidx', note: 'WHERE closed_at IS NULL']
    (invite_code, created_at) [name: 'rooms_code_latest_idx', note: 'created_at DESC']
    (created_at) [name: 'rooms_open_created_idx', note: 'WHERE closed_at IS NULL']
  }
}

Table room_participations {
  id bigint [primary key, increment]
  room_id bigint [ref: > rooms.id, not null]
  user_id bigint [ref: > users.id, not null]
  nickname varchar
  goal varchar
  category varchar
  camera_on boolean [not null, default: false]
  focus_state varchar(20) [not null, default: 'FOCUS']
  focus_sec integer [not null, default: 0]
  reserved_at timestamptz [not null]
  stomp_confirmed boolean [not null, default: false]
  stomp_session_id varchar
  session_opened_at timestamptz [note: '마지막으로 확정된 세션의 소켓 오픈 시각']
  task_id varchar
  disconnected_at timestamptz
  joined_at timestamptz [note: '최초 STOMP 확정 시각. NULL = 확정된 적 없는 예약']
  left_at timestamptz [note: 'NULL = 지금 자리를 가진 참가자']
  leave_reason varchar(20) [note: 'EXPLICIT | DISCONNECT_TIMEOUT | SWITCHED_ROOM']

  indexes {
    (user_id) [unique, name: 'rp_live_user_uidx', note: 'WHERE left_at IS NULL']
    (room_id, user_id) [unique, name: 'rp_live_room_user_uidx', note: 'WHERE left_at IS NULL']
    (stomp_session_id) [name: 'rp_session_idx', note: 'WHERE stomp_session_id IS NOT NULL']
    (reserved_at) [name: 'rp_reserved_idx', note: 'WHERE left_at IS NULL AND NOT stomp_confirmed']
    (disconnected_at) [name: 'rp_disconnected_idx', note: 'WHERE left_at IS NULL AND disconnected_at IS NOT NULL']
    (task_id) [name: 'rp_task_idx', note: 'WHERE task_id IS NOT NULL']
    (user_id, joined_at) [name: 'rp_user_joined_idx']
  }
}

Table live_task {
  task_id varchar [primary key, note: 'ECS 태스크 ID(로그 스트림과 일치), 없으면 UUID']
  heartbeat_at timestamptz [not null]
  reclaimed_at timestamptz [note: 'NOT NULL = 다른 태스크가 죽었다고 보고 참가자를 회수함(펜싱 신호)']
}
